# VectorCanvas

./: .gitignore  .gitmodules  LICENSE  README.md
.github/.workflows/: junit.yml
.github/workflows/: build.yml  junit.yml
java/: pom.xml
java/src/com/jules1univ/vectorcanvas/: NativeCanvas.java  NativeLibLoader.java
java/test/com/jules1univ/vectorcanvas/: NativeCanvasTest.java
native/: CMakeLists.txt
native/include/: global.h  vectorcanvas.h
native/src/: vectorcanvas.c
